--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -59,3 +59,10 @@
     border: 4px solid tomato;
     padding: 2px;
 }
+/* Responsive area */
+@media (max-width:1050px) {
+  .explore-menu-text{
+    min-width: 100%;
+    font-size: 14px;
+  }
+}
