--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,22 +1,87 @@
 /* cart/keranjang css area */
-.cart{
-    margin-top: 100px;
+.cart {
+  margin-top: 100px;
 }
 /* css untuk bagian table pesanan pada keranjang belanja */
-.cart-items-title{
-    display: grid;
-    grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
-    align-items: center;
-    color: grey;
-    font-size: max(1vw,12px);
+.cart-items-title {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
+  align-items: center;
+  color: grey;
+  font-size: max(1vw, 12px);
 }
 /* untuk mengatur item tulisan di dalamnya */
-.cart-items-item{
-    margin: 10px 0px;
-    color: black;
+.cart-items-item {
+  margin: 10px 0px;
+  color: black;
 }
 /* mengatur agar lebih kecil/besarnya pesanan */
-.cart-items-item img{
-    width: 50px;
-
+.cart-items-item img {
+  width: 50px;
+}
+/*  */
+.cart hr {
+  height: 1px;
+  background-color: #e2e2e2;
+  border: none;
+}
+/* tanda silang pada pesanan (REMOVE) */
+.cart-items-item .cross {
+  cursor: pointer;
+}
+/* bagian cart total dan enter code CSS Area */
+.cart-bottom {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+  gap: max(12vw, 20px);
+}
+.cart-total {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.cart-total-details {
+  display: flex;
+  justify-content: space-between;
+  color: #555;
+}
+/* bagian tombol prosess */
+.cart-total hr {
+  margin: 10px 0px;
+}
+/* bagian untuk mengatur tombol cart total */
+.cart-total button {
+  border: none;
+  color: white;
+  background-color: tomato;
+  width: max(15vw, 200px);
+  padding: 12px 0px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/*  */
+.cart-promocode {
+  flex: 1;
+}
+.cart-promocode p {
+  color: #555;
+}
+.cart-promocode-input {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eaeaea;
+  border-radius: 4px;
+}
+.cart-promocode-input input {
+  background: transparent;
+  border: none;
+  outline: none;
+  padding-left: 10px;
+}
+.cart-promocode-input button {
+  width: max(10vw);
 }
