--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -82,6 +82,21 @@
   outline: none;
   padding-left: 10px;
 }
+/* bagian input promo CSS area */
 .cart-promocode-input button {
-  width: max(10vw);
+  width: max(10vw,150px);
+  padding: 12px 5px;
+  background-color: black;
+  border: none;
+  color: white;
+  border-radius: 4px;
+}
+/* RESPONSIVE CSS AREA */
+@media (max-width:750px) {
+  .cart-bottom{
+    flex-direction: column-reverse;
+  }
+  .cart-promocode{
+    justify-content: start;
+  }
 }
